recursion.lessons.recursion.koch.Koch.scala.error
Koch:24: error: expected start of definition
	override def run() {
                 ^Koch:27: error: Unmatched closing brace '}' ignored here
}
^